--- a/src/main/resources/liquibase/1.0/changelog-1.0.1.yml
+++ b/src/main/resources/liquibase/1.0/changelog-1.0.1.yml
@@ -8,6 +8,6 @@ databaseChangeLog:
             columns:
               - column:
                   name: speciality
-                  type: varchar(50)
+                  type: VARCHAR(64)
                   constraints:
                     nullable: true
