--- a/src/main/resources/liquibase/1.0/changelog-1.0.4.yml
+++ b/src/main/resources/liquibase/1.0/changelog-1.0.4.yml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: Insert John Doe's data into students table
+      id: Insert Michael Johnson's data into students table
       author: Rashad Amanov
       changes:
         - insert:
@@ -8,16 +8,16 @@ databaseChangeLog:
             columns:
               - column:
                   name: name
-                  value: John Doe
+                  value: Michael Johnson
               - column:
                   name: score
-                  value: 5.50
+                  value: 9.5
               - column:
                   name: gender
                   value: MALE
               - column:
                   name: status
-                  value: ACTIVE
+                  value: DELETED
               - column:
                   name: speciality
-                  value: Mathematics
+                  value: Chemistry
