--- a/src/main/resources/liquibase/changelog-master.yml
+++ b/src/main/resources/liquibase/changelog-master.yml
@@ -1,7 +1,3 @@
 databaseChangeLog:
-  - include:
-      file: classpath:/liquibase/1.0/changelog-1.0.0.yml
-  - include:
-      file: classpath:/liquibase/1.0/changelog-1.0.1.yml
-  - include:
-      file: classpath:/liquibase/1.0/changelog-1.0.2.yml
+  - includeAll:
+      path: classpath:/liquibase/1.0/
