--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "java"
     id "org.springframework.boot" version "$springBootVersion"
     id "io.spring.dependency-management" version "$dependencyManagementVersion"
+    id "groovy"
 }
 
 group = "az.ingress"
@@ -41,6 +42,13 @@ dependencies {
 
     // Springdoc OpenAPI
     implementation "org.springdoc:springdoc-openapi-ui:$openApiVersion"
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //test
+    implementation 'org.apache.groovy:groovy:4.0.23'
+    testImplementation 'org.spockframework:spock-spring:2.2-M1-groovy-4.0'
+    testImplementation('io.github.benas:random-beans:3.9.0')
 }
 
 test {
